# sap10calcs

./: .buildinfo  .gitignore  CNAME  LICENSE  README.md  api.html  demos.html  developersnotes.html  genindex.html  index.html  installation.html  objects.inv  overview.html  pyproject.toml  quickstart.html  rdsap_schema_21_0_0.html  rdsaptutorials.html  sap_schema_19_1_0.html  sapcalculationmethod.html  sapinputfiles.html  saptutorials.html  search.html  searchindex.js  testing.html
.doctrees/: api.doctree  demos.doctree  developersnotes.doctree  environment.pickle  index.doctree  installation.doctree  overview.doctree  quickstart.doctree  rdsaptutorials.doctree  sapcalculationmethod.doctree  sapinputfiles.doctree  saptutorials.doctree  testing.doctree
_excel/: SAP10calcs.xlsm
_sources/: api.rst.txt  demos.rst.txt  developersnotes.rst.txt  index.rst.txt  installation.rst.txt  overview.rst.txt  quickstart.rst.txt  rdsap_schema_21_0_0.rst.txt  rdsaptutorials.rst.txt  sapinputfiles.rst.txt  saptutorials.rst.txt  testing.rst.txt
docs/: _generate_xml_docs.py  _generate_xml_references.py  _prompts.txt  conf.py  index.md  rdsap_schema_21_0_0.md  sap_compliance_report.md  sap_schema_19_1_0.md  sap_schema_19_1_0.rst  sapcalculationmethod.rst
example_input_files/: detached_house.ipynb
examples/: Example - creating a complete RdSAP XML file.ipynb  Example - creating a complete RdSAP XML file.xml  Example - creating a complete SAP XML file.ipynb  Example - creating a complete SAP XML file.xml  Example - creating a new empty SAP XML file.ipynb  (+12 more)
sap10calcs/: __init__.py  (+4 more)
(+56 files in other folders)
